--- a/lang/en.json
+++ b/lang/en.json
@@ -1,137 +1,128 @@
 {
-    
-    "nodatafound": "Dados anteriores não encontrados nesse lixo do cacete.",
-    "retrievingdata": "Recuperando dados armazenados anteriormente nesse inferno, karaio",
-    "datarestored": "Dados armazenados anteriormente recuperados com êxito PORRAAAA.",
-    "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot seu merda.",
-    "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um segurança viadão.",
-    "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PRA COMER SEU CU PORRA!",
-
-
-    "welcome": "Seja welcomido(a) @%%NAME%% diliça :blue_heart: :blue_heart: leia nossas regras http://goo.gl/6RP5x1",
-    "welcomeback": "Senti saudades @%%NAME%% diliçãu :green_heart:",
-    "songknown": "/me :repeat: Essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás, olhe o historico ou veja o nome vermelho do video antes de repetir :repeat:",
-    "timelimit": "@%%NAME%%, seu video tem duração superior a %%MAXLENGTH%% minutos PORRA. Você não pode tocar algo longo assim cacete.",
-    "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
-    "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
-
-
-    "isopen": "/me A ROLETA RUSSA COMEÇOU SEU FILHO DA PUTA DO CARALHO! Use !join para entrar nessa PORRA SE TIVER CORAGEM SEU FILHO DA PUTA!",
-    "winnerpicked": "/me UM FILHO DA PUTA FOI ESCOLHIDO! @%%NAME%% ganhou a posição %%POSITION%% KARAIO.",
-
-
-    "alreadyadding": "/me Usuário já está sendo adicionado PORRA! Posição desejada alterada para %%POSITION%%.",
-    "adding": "/me @%%NAME%% foi adicionado à porra da fila. Posição atual: %%POSITION%% nesse karaio.",
-
-
-    "usernotfound": "/me Zé Bostola não encontrado.",
-    "notdisconnected": "/me @%%NAME%% não caiu quando estive nesse caraio.",
-    "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
-    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás PORRA, TÁ DE SACANAGEM NÉ KARAIO?: %%TIME%%.",
-    "valid": "/me @%%NAME%% foi dar a bunda à %%TIME%% atrás e deve ter posição %%POSITION%% nessa caraia.",
-
-
-    "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
-    "warning2": "@%%NAME%%, você será removido em breve por inatividade se não responder.",
-    "afkremove": "@%%NAME%%, você foi removido por estar inativo por %%TIME%%. Você teve a posição %%POSITION%%. Use o chat pelo menos uma vez em 1 hora se quiser tocar.",
-
-
-    "caps": "@%%NAME%%, desligue seu capslock, filho da puta sem costumes.",
-    "askskip": "@%%NAME%%, não peça para pular PORRA.",
-    "spam": "/me @%%NAME%%, não faça spam, PORRA.",
-    "roomadvertising": "@%%NAME%%, POSTA ESSE LINK, NO CU DA ARROMBADA DA TUA MÃE, SEU FILHO DA PUTA.",
-    "adfly": "@%%NAME%%, mude de autowoot seu kawaiizudo :heart: recomendamos o Origem woot http://goo.gl/iubHkn",
-
-
-    "invalidtime": "/me [@%%NAME%%] Tempo inválido caralho.",
-    "nouserspecified": "/me [@%%NAME%%] Usuário não especificado caralho.",
-    "invaliduserspecified": "/me [@%%NAME%%] Usuário inválido caralho.",
-    "nolistspecified": "/me [@%%NAME%%] Lista não especificada caralho.",
-    "invalidlistspecified": "/me [@%%NAME%%] Lista inválida caralho.",
-    "novaliduserspecified": "/me [@%%NAME%%] Usuário especificado não válido caralho.",
-    "nolimitspecified": "/me [@%%NAME%%] Limite não especificado caralho.",
-    "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido caralho.",
-    "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida PORRA.",
-    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado PORRAAAAA.",
-    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado merda.",
-    "afkremoval": "Remoção de AFK DESSE INFERNO PORRA",
-    "afksremoved": "AFKs removidos, chupa seus viados",
-    "afklimit": "Limite AFK",
-    "autoskip": "autoskip",
-    "newblacklisted": "/me [@%%NAME%%] Essa música está na lista negra %%BLACKLIST%%! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
-    "cycleguard": "cycleguard",
-    "timeguard": "timeguard",
-    "chatfilter": "chatfilter",
-    "lockdown": "lockdown",
-    "lockguard": "lockguard",
-    "usercommands": "comandos de usuário",
-    "motd": "MotD",
-    "welcomemsg": "Mensagem de boas vindas para novas bichas",
-    "songstats": "estatísticas de música",
-    "etarestriction": "restrição de eta",
-    "activeusersintime": "/me [@%%NAME%%] %%AMOUNT%% usuários estiveram ativos nos últimos %%TIME%% minutos.",
-    "maximumafktimeset": "/me [@%%NAME%%] Duração máxima de AFK agora é: %%TIME%% minutos.",
-    "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
-    "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
-    "autowoot": "/me Nós recomendamos o Origem Woot http://goo.gl/iubHkn",
-    "brandambassador": "/me Um Embaixador é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
-    "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Bouncer+.",
-    "chatcleared": "/me [@%%NAME%%] O chat foi limpo com o cu de algum vassilau.",
-    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
-    "commandslink": "/me Comandos do %%BOTNAME%%: http://goo.gl/0DT5RC",
-    "eatcookie": "/me Tem de mencionar alguém arrombado.",
-    "nousercookie": "/em Não vejo este zé bostola chamado %%NAME%% nessa delicia de sala, ele deve ter ido dar o cu",
-    "selfcookie": "/me @%%NAME%%, você é safado, né? Dando essas paradas a si mesmo, bah. Compartilhe um pouco com os outros caralho!",
-    "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
-    "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
-    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários seu viadão.",
-    "emojilist": "/me Emojis: %%LINK%%",
-    "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
-    "eta": "/me @%%NAME%% irão ver sua bunda peluda em aproximadamente %%TIME%% nessa bagaça.",
-    "facebook": "/me Curta nossa a porra da nossa página no Facebook: %%LINK%%",
-    "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj sua nova bicha: %%LINK%%",
-    "roulettejoin": "/me @%%NAME%% entrou na porra da roleta russa! (Use !leave para desistir seu viadinho.)",
-    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve nessa delicia por %%TIME%%.",
-    "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior!",
-    "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
-    "kill": "/me Eu voltarei, e vou comer seu cu com sal seu arromba...do.............",
-    "rouletteleave": "/me @%%NAME%% desistiu da roleta russa! esse boiolinha",
-    "songlink": "/me [@%%NAME%%] Link para o lixo atual: %%LINK%%",
-    "usedlockskip": "/me [%%NAME%% usou 'lockskip', é super efetivo no pokemon do tipo Viadão.]",
-    "lockskippos": "/me [@%%NAME%%] Lockskip está agora movendo para a posição %%POSITION%%.",
-    "lockguardtime": "/me [@%%NAME%%] A proteção de travamento agora é %%TIME%% minuto(s).",
-    "maxlengthtime": "/me [@%%NAME%%] A duração máxima de tempo agora é %%TIME%% minutos.",
-    "motdset": "/me Mensagem do Dia:  %%MSG%%",
-    "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
-    "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, FILHO DA PUTA.",
-    "move": "/me [%%NAME%% usou 'move', é super efetivo no pokemon tipo Delicia.]",
-    "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
-    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos SEU GAY.",
-    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s), SE FUDEU VACILÃO.",
-    "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado, faz merda de novo pra você ver.",
-    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior seu fi do exu.",
-    "oplist": "/me Lista OP: %%LINK%%",
-    "pong": "/me Pong NO TEU CU CARALHO!",
-    "reload": "/me Reiniciando, quando voltar como o teu cu...",
-    "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na porra da fila.",
-    "roomrules": "/me Encontre as regras desta peste aqui sinhô: %%LINK%%",
-    "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% usou 'skip', é super efetivo neste tipo de Pokemon!.]",
-    "madeby": "/me Esta delicia foi feito por %%NAME%%.",
-    "activefor": "Estive online por %%TIME%%.",
-    "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
-    "swapwlonly": "/me [@%%NAME%%] Use !swap somente com usuários que estão na fila de espera.",
-    "swapping": "/me Trocando posições: %%NAME1%% com %%NAME2%%.",
-    "genres": "/me Encontre os gêneros permitidos aqui: %%LINK%%",
-    "notbanned": "/me [@%%NAME%%] Usuário mencionado não foi banido.",
-    "unmutedeveryone": "/me [@%%NAME%%] Todos foram desmutados.",
-    "unmuteeveryonerank": "/me [@%%NAME%%] Somente Coordenadores podem desmutar todos os usuários de uma vez.",
-    "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado.",
-    "unmuterank": "/me [@%%NAME%%] Você não pode desmutar usuários do mesmo rank ou superior.",
-    "commandscd": "/me [@%%NAME%%] O tempo de espera de comandos para usuários agora é %%TIME%% segundos.",
-    "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: ' + %%WOOT%% + ', mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
-    "website": "/me Visite nosso site: %%LINK%%",
-    "youtube": "/me [%%NAME%%] Inscreva-se no nosso canal: %%LINK%%",
-    "songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
-
+"nodatafound": "Dados anteriores não encontrado nessa PORRA.",
+"retrievingdata": "Recuperando dados anteriores dessa delicia.",
+"datarestored": "Dados anteriores recuperados <3 .",
+"greyuser": "Somente seguranças ou mais podem ativar o script, seu lixão.",
+"bouncer": "O script não pode mover pessoas enquanto usado por um segurança viadão.",
+"online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PARA COMER UNS CU!",
+"welcome": "/me Seja welcomido(a) %%NAME%% delicinha :green_heart: leia nossas regras http://goo.gl/6RP5x1 ",
+"welcomeback": "/me Welcomido(a) de volta, %%NAME%% kawaiizudo :blue_heart: :blue_heart:",
+"songknown": "/me :repeat: Essa caraia foi tocada %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%, a ultima vez desse lixo foi %%LASTTIME%% atrás. :repeat:",
+"timelimit": "/me @%%NAME%%, ESSA MERDA É SUPERIOR A %%MAXLENGTH%% MINUTOS CARALHO, você não pode rodar algo longo assim porra.",
+"permissionownsong": "/me :up: @%%NAME%% tem permissão para rodar um video de sua autoria!",
+"isblacklisted": "/me Esse video está na %%BLACKLIST%% lista negra! Pulando...",
+"isopen": "/me A ROLETA RUSSA COMEÇOU CARALHOOOOOOOO! Digite !join para participar!",
+"winnerpicked": "/me UM VIADÃO FOI ESCOLHIDO! @%%NAME%% para a posição %%POSITION%%.",
+"alreadyadding": "/me Usuario já está sendo adicionado! Posição alterada para %%POSITION%%.",
+"adding": "/me Adicionou @%%NAME%% a fila. Posição atual: %%POSITION%%.",
+"usernotfound": "/me Viadão não encontrado.",
+"notdisconnected": "/me @%%NAME%% não caiu enquanto estava nessa caraia.",
+"noposition": "/me Sem ultima posição conhecida (Mas lembro um pouco do 69 hmmm). A fila precisa ser atualizada ao menos 1 vez para registrar posições.",
+"toolongago": "/me @%%NAME%% saiu há muito tempo atrás, há %%TIME%%, num fode cara",
+"valid": "/me @%%NAME%% foi dar o cu há %%TIME%% e deve ter a bundinha na posição %%POSITION%%.",
+"warning1": "/me @%%NAME%%, você esteve afk por %%TIME%%, FALE ALGUMA COISA SE NÃO VOU TE REMOVER DA FILA FILHO DA PUTA.",
+"warning2": "/me @%%NAME%%, VOCÊ VAI SER REMOVIDO, ULTIMO AVISO CARALHO <3.",
+"afkremove": "/me @%%NAME%%, você foi removido por ficar muito tempo afk, %%TIME%%. Você estava na posição %%POSITION%%. Converse ao minimo 1 vez a cada %%MAXIMUMAFK%% minutos se você quiser tocar um video.",
+"caps": "/me @%%NAME%%, DESLIGA ESSE CAPS SEU FILHO DA MÃE SEM COSTUMES.",
+"askskip": "/me @%%NAME%%, NÃO PEDE PARA PULAR FILHO DA PUTA.",
+"spam": "/me @%%NAME%%, PARA DE SPAM CARALHO.",
+"roomadvertising": "/me @%%NAME%%, BOTA LINK DE PORNO DA SUA MÃE FILHO DA PUTA QUE É MELHOR.",
+"adfly": "/me @%%NAME%%, mude seu autowoot. Aconselhamos o Origem Woot: http://goo.gl/iubHkn",
+"invalidtime": "/me [@%%NAME%%] tempo invalido.",
+"nouserspecified": "/me [@%%NAME%%] Viadão não expecificado.",
+"invaliduserspecified": "/me [@%%NAME%%] Viadão invalido.",
+"nolistspecified": "/me [@%%NAME%%] Sem lista expecifica.",
+"invalidlistspecified": "/me [@%%NAME%%] Lista invalida.",
+"novaliduserspecified": "/me [@%%NAME%%] Usuario invalido (Igual a piroka).",
+"nolimitspecified": "/me [@%%NAME%%] Sem limite expecificado.",
+"invalidlimitspecified": "/me [@%%NAME%%] Limite invalido.",
+"invalidpositionspecified": "/me [@%%NAME%%] Posição invalida.",
+"toggleon": "/me [@%%NAME%%] %%FUNCTION%% ATIVADO NESSA DELICIA.",
+"toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado nessa delicia.",
+"afkremoval": "Removendo AFKs BUAHAHAHAHA",
+"afksremoved": "AFKs removidos <3",
+"afklimit": "AFK limite",
+"autoskip": "pulando automaticamente",
+"newblacklisted": "/me [@%%NAME%%] Essa música está na %%BLACKLIST%% LISTA NEGRA! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
+"blinfo": "[@%%NAME%%] Infoormação da lista negra - Autor: %%AUTHOR%%, Titulo: %%TITLE%%, mID: %%SONGID%%",
+"blacklist": "LISTA NEGRAAAAA",
+"cycleguard": "cycleguard",
+"timeguard": "timeguard",
+"chatfilter": "chatfilter",
+"lockdown": "lockdown",
+"lockguard": "lockguard",
+"usercommands": "comandos de usuários",
+"motd": "MotD",
+"welcomemsg": "mensagem de boas vindas para novas bixas",
+"songstats": "estatísticas da música <3",
+"etarestriction": "eta restrição",
+"voteskip": "Pulo por votos",
+"voteskiplimit": "/me [@%%NAME%%] Votos para pulo configurada á %%LIMIT%% chatos/mehs.",
+"voteskipexceededlimit": "/me @%%Name%%, seu video passou do limite de MEH's/Chatos por ser muito merda (%%LIMIT%% chatos).",
+"voteskipinvalidlimit": "/me [@%%NAME%%] Voteskip invalido PORRA, depois tente novamente.",
+"voteskipsetlimit": "/me [@%%NAME%%] Limite de voteskip configurado para %%LIMIT%%.",
+"activeusersintime": "/me [@%%NAME%% Aqui tem %%AMOUNT%% usuarios ativos nos ultimos %%TIME%% minutos.",
+"maximumafktimeset": "/me [@%%NAME%%] Duração maxima de afk configurada para %%TIME%% minutos.",
+"afkstatusreset": "/me [@%%NAME%%] Status de afk resetado de @%%USERNAME%%.",
+"inactivefor": "/me [@%%NAME%%] @%%USERNAME%% está inativo por %%TIME%%.",
+"autowoot": "/me Recomendamos o Origem Woot para autowoot: http://goo.gl/iubHkn",
+"brandambassador": "/me Um Embaixador de Marca é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
+"bouncerplusrank": "/me [@%%NAME%%] você precisa ser Coordenador ou mais para ativar o segurança+.",
+"chatcleared": "/me [@%%NAME%%] limpou o chat com o cu de algum vacilão.",
+"deletechat": "/me [@%%NAME%%] Limpou o chat de %%USERNAME%% com o cu dele.",
+"commandslink": "/me %%BOTNAME%% comandos: https://github.com/B1G-B0SS/Exercito-Bot/blob/master/commands.md",
+"eatcookie": "/me ama buscar a peça.",
+"nousercookie": "/em não vejo %%NAME%% na sala, ele deve ter ido dar a bunda.",
+"selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando essas delicias a si mesmo, bah. Compartilhe um pouco com os outros FILHO DA PUTA!",
+"cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
+"cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é %%TIME%% minuto(s).",
+"dclookuprank": "/me [@%%NAME%%] Somente seguranças ou superiores podem dar !dcloockup em outros usuarios.",
+"emojilist": "/me Lista de emojis: %%LINK%%",
+"notinwaitlist": "/me @%%NAME%%, vocÊ não está na fila PORRA.",
+"eta": "/me @%%NAME%% você vai rodar sua merda daqui há %%TIME%%.",
+"facebook": "/me Curta nossa página no Facebook: %%LINK%%",
+"starterhelp": "/me Essa imagem te ajudara a usar o Plug: %%LINK%%",
+"roulettejoin": "/me @%%NAME%% ENTROU NA ROLETA RUSSAAAAAAAAAA! (!leave se você quiser desistir seu arregão.)",
+"jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve na sala por %%TIME%% minuto(s).",
+"kickrank": "/me [@%%NAME%%] você não pode kickar alguém com mesmo cargo, ou superior a você FILHO DA PUTA!",
+"kick": "/me [@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
+"kill": "/me Eu voltarei, e vou comer seu cu, seu....filho..da.......puta.",
+"rouletteleave": "/me @%%NAME%% arregou da roleta!",
+"songlink": "/me [@%%NAME%%] Link do video atual: %%LINK%%",
+"usedlockskip": "/me [%%NAME%% usou lockskip, é super efetivo no pokemon tipo Zé Bostola.]",
+"lockskippos": "/me [@%%NAME%%] Lockskip irá mover o dj para a posição %%POSITION%%.",
+"lockguardtime": "/me [@%%NAME%%] Lockguard configurado para %%TIME%% minuto(s).",
+"maxlengthtime": "/me [@%%NAME%%] Duração maxima de música configurada para %%TIME%% minutos.",
+"motdset": "/me MotD configurado para: %%MSG%%",
+"motdintervalset": "/me Intervalo de MotD configurado para %%INTERVAL%%.",
+"addbotwaitlist": "/me @%%NAME%%, NÃO TENTE ME ADICIONAR A FILA FILHO DA PUTA.",
+"move": "/me [%%NAME%% usou mover, é super efetivo no pokemon tipo Jailson.]",
+"mutednotime": "/me [@%%NAME%%] calou @%%USERNAME%%.",
+"mutedmaxtime": "/me [@%%NAME%%] Você só pode calar no maximo por %%TIME%% minutos.",
+"mutedtime": "/me [@%%NAME%%] Calou @%%USERNAME%% por %%TIME%% minutos.",
+"unmuted": "/me [@%%NAME%%] Pode falar novamente @%%USERNAME%%.",
+"muterank": "/me [@%%NAME%%] Você não pode calar usuarios com cargo igual, ou superior ao seu, SEU PORRA.",
+"oplist": "/me OP lista: %%LINK%%",
+"pong": "/me Pong NO SEU CU SEU MERDA!",
+"reload": "/me Vou comer o cu de um vacilão, já volto.",
+"removenotinwl": "/me [@%%NAME%%] O usuario @%%USERNAME%% não está na fila.",
+"roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
+"sessionstats": "/me [@%%NAME%%] Legais/woots total: %%WOOTS%%, Chatos/Mehs total: %%MEHS%%, Grab/add total: %%GRABS%%.",
+"skip": "/me [%%NAME%% usou skip, é super efetivo no pokemon que curte oco.]",
+"madeby": "/me Esse bot foi feito por %%NAME%%.",
+"activefor": "Estive ativo por %%TIME%%.",
+"swapinvalid": "/me [@%%NAME%%] Usuario expecificado.",
+"swapwlonly": "/me [@%%NAME%%] Somente troque com usuarios na fila (Hmmm trocar né?)",
+"swapping": "/me Trocando %%NAME1%% com %%NAME2%%.",
+"genres": "/me Encontre os generos da sala aqui: %%LINK%%",
+"notbanned": "/me [@%%NAME%%] O usuario não foi banido.",
+"unmutedeveryone": "/me [@%%NAME%%] Descalar todo mundo.",
+"unmuteeveryonerank": "/me [@%%NAME%%] Somente Coordenadores ou superior pode descalar todo mundo.",
+"notmuted": "/me [@%%NAME%%] Esse usuario não estava calado.",
+"unmuterank": "/me [@%%NAME%%] Você não pode descalar usuarios com mesmo cargo, ou superior que você.",
+"commandscd": "/me [@%%NAME%%] O delay de comandos está para %%TIME%% segundos.",
+"voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ legais/woots: %%WOOT%%, chatos/mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
+"website": "/me Visite nosso site <3 : %%LINK%%",
+"youtube": "/me [%%NAME%%] Se inscreva no nosso canal do Youtube: %%LINK%%",
+"songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
 }
