--- a/lang/en.json
+++ b/lang/en.json
@@ -5,8 +5,8 @@
 "greyuser": "Somente seguranças ou mais podem ativar o script, seu lixão.",
 "bouncer": "O script não pode mover pessoas enquanto usado por um segurança viadão.",
 "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PARA COMER UNS CU!",
-"welcome": "/me Seja welcomido(a) %%NAME%% delicinha :green_heart: leia nossas regras http://goo.gl/6RP5x1 ",
-"welcomeback": "/me Welcomido(a) de volta, %%NAME%% kawaiizudo :blue_heart: :blue_heart:",
+"welcome": "/me Seja welcomido(a) @%%NAME%% delicinha :green_heart: leia nossas regras http://goo.gl/6RP5x1 ",
+"welcomeback": "/me Welcomido(a) de volta, @%%NAME%% kawaiizudo :blue_heart: :blue_heart:",
 "songknown": "/me :repeat: Essa caraia foi tocada %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%, a ultima vez desse lixo foi %%LASTTIME%% atrás. :repeat:",
 "timelimit": "/me @%%NAME%%, ESSA MERDA É SUPERIOR A %%MAXLENGTH%% MINUTOS CARALHO, você não pode rodar algo longo assim porra.",
 "permissionownsong": "/me :up: @%%NAME%% tem permissão para rodar um video de sua autoria!",
